--- a/agentic/agents/nlp_summarizer.yaml
+++ b/agentic/agents/nlp_summarizer.yaml
@@ -2,31 +2,59 @@
 name: nlp_summarizer
 endpoint: http://localhost:9103
 transport: http
-description: Natural language processing and summarization agent
+description: Natural language processing, summarization, and text analysis agent with Azure OpenAI integration
 enabled: true
 tools:
   - name: summarize
-    description: Summarize text content
+    description: Summarize text content using AI or local processing
     params_schema:
       type: object
       properties:
         text:
           type: string
           description: Text to summarize
+          minLength: 10
         max_length:
           type: integer
           default: 200
-          description: Maximum summary length
+          minimum: 50
+          maximum: 2000
+          description: Maximum summary length in characters
         style:
           type: string
           enum: [brief, detailed, bullet_points]
           default: brief
+          description: Summary style and format
       required: [text]
     returns_schema:
       type: object
       properties:
-        summary: {type: string}
-        key_points: {type: array, items: {type: string}}
-        word_count: {type: integer}
+        summary: {type: string, description: "Generated summary"}
+        key_points: {type: array, items: {type: string}, description: "Key points extracted"}
+        word_count: {type: integer, description: "Word count of summary"}
+        original_length: {type: integer, description: "Original text length"}
+        compression_ratio: {type: number, description: "Compression ratio"}
+        source: {type: string, description: "Processing source (Azure OpenAI or local)"}
 
-
+  - name: extract_entities
+    description: Extract named entities from text (organizations, locations, numbers, dates)
+    params_schema:
+      type: object
+      properties:
+        text:
+          type: string
+          description: Text to extract entities from
+          minLength: 10
+      required: [text]
+    returns_schema:
+      type: object
+      properties:
+        entities:
+          type: object
+          properties:
+            organizations: {type: array, items: {type: string}}
+            locations: {type: array, items: {type: string}}
+            numbers: {type: array, items: {type: string}}
+            dates: {type: array, items: {type: string}}
+        total_entities: {type: integer}
+        source: {type: string}
